--- a/shaicha-manager/src/main/resources/templates/system/user/sysedit.html
+++ b/shaicha-manager/src/main/resources/templates/system/user/sysedit.html
@@ -78,7 +78,22 @@
 										type="text" th:value="${user.zhongxinImg}"> -->
 								</div>
 							</div>
-						
+							<div class="form-group">
+								<label class="col-sm-3 control-label">普通打印末尾框标题：</label>
+								<div class="col-sm-8">
+									<input id="biaogeBiaoti" name="biaogeBiaoti" class="form-control"
+										type="text" th:value="${user.biaogeBiaoti}">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">标题内容：</label>
+								<div class="col-sm-8">
+									<textarea rows="6" cols="" id="biaogeNeirong" name="biaogeNeirong" class="form-control"
+									th:text="${user.biaogeNeirong}"></textarea>
+									<!-- <input id="biaogeNeirong" name="biaogeNeirong" class="form-control"
+										type="text" th:value="${user.biaogeNeirong}"> -->
+								</div>
+							</div>
 						
 						<div class="form-group">
 							<div class="col-sm-8 col-sm-offset-3">
