--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/shifanstudent.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/shifanstudent.html
@@ -89,7 +89,9 @@
                         		<option th:each="list:${studentList}" th:value="${list.school}" th:text="${list.school}"></option>
                     		</select> -->
 						</div>
-						
+						<div class="columns pull-right col-md-2 nopadding">
+							<input id="xueshengid" name="xueshengid" class="form-control" placeholder="学生id" type="text">
+						</div>
 					</div>
 				 <table id="exampleTable" data-mobile-responsive="true"> 
 					</table>
