--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
@@ -71,6 +71,9 @@
 								<option th:each="sc:${school}" th:value="${sc.orgname}" th:text="${sc.orgname}"></option>
 							</select>
 						</div>
+						<div class="columns pull-right col-md-2 nopadding">
+							<input id="xueshengid" name="xueshengid" class="form-control" placeholder="学生id" type="text">
+						</div>
 					</div>
 					<table id="exampleTable" data-mobile-responsive="true">
 					</table>
