--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/dengdaigrade.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/dengdaigrade.html
@@ -46,6 +46,10 @@
 																	+"&grade="+$("#grade").val()
 																	+"&stuclass="+$("#stuclass").val()
 		}
+		if(type == 5){
+			window.location.href= "/studentReportNew/shaichawenjuan?activityId="+$("#activityId").val()
+																	
+		}
 													
 	 })
 	 
