--- a/shaicha-manager/src/main/resources/templates/informationNEW/school/add.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/school/add.html
@@ -168,6 +168,7 @@
 		                        		<option value="小学">小学</option>
 		                        		<option value="初中">初中</option>
 		                        		<option value="高中">高中</option>
+										<option value="大学">大学</option>
 		                    		</select>
 								</div>
 							</div>
