--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/shifanstudent.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/shifanstudent.html
@@ -43,9 +43,9 @@
 								 <button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="jyjshaichabaogao()">
 									   教育局筛查报告
 								</button> -->
-								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="wxtuisong()">
+							<!--	<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="wxtuisong()">
 									 微信推送
-								</button>
+								</button>-->
 						</div>
 						<div class="columns pull-right">
 							<!-- <button class="btn btn-info" onclick="myrefresh()">重置</button> -->
