--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
@@ -24,9 +24,9 @@
 								 <!--<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-default" onclick="datidaoru()">
 									  答题导入
 								</button>-->
-								<button  type="button" class="btn  btn-default" onclick="oldDataImport()">
+								<!--<button  type="button" class="btn  btn-default" onclick="oldDataImport()">
 									筛查老数据导入
-								</button>
+								</button>-->
 								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="erweimaxiazai()">
 									   二维码下载
 								</button>
