--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/jikongimport.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/jikongimport.html
@@ -35,7 +35,7 @@
                         <div class="form-group">
                             <label class="col-sm-3 control-label">选择模板</label>
                             <div class="col-sm-8">
-                                <a href="/upload/template/疾控中心模板.xlsx">模板下载</a>
+                                <a href="/upload/template/验光数据导入模板.xlsx">模板下载</a>
                             </div>
                         </div>
                         <div class="form-group">
