--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
@@ -22,7 +22,7 @@
 									    模板导入
 								</button>
                                 <button shiro:hasPermission="information:student:student" type="button" class="btn  btn-default" onclick="jikongimport()">
-                                        疾控数据导入
+                                        验光数据导入
                                 </button>
 								 <!--<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-default" onclick="datidaoru()">
 									  答题导入
