增加预测按钮

--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/shifanstudent.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/shifanstudent.html
@@ -37,6 +37,9 @@
 								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="huodongbaogao()">
 									   活动报告
 								</button>
+								<button shiro:hasPermission="information:student:yuce" type="button" class="btn  btn-info" onclick="yuce()">
+								预测
+								</button>
 								<!-- <button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="baogaoxuexiao()">
 									   检测报告(学校)
 								</button>
