--- a/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
+++ b/shaicha-manager/src/main/resources/templates/informationNEW/student/student.html
@@ -30,15 +30,18 @@
 								<!--<button  type="button" class="btn  btn-default" onclick="oldDataImport()">-->
 									<!--疾控数据导入-->
 								<!--</button>-->
-								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="erweimaxiazai()">
-									   二维码下载
-								</button>
+								<!--<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="erweimaxiazai()">-->
+									   <!--二维码下载-->
+								<!--</button>-->
 								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="erweimadayin()">
 									  批量 打印条形码
 								</button>
 								 <button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="shaichajieguodaochu()">
-									   筛查结果导出
+									   筛查结果导出(单word)
 								</button>
+                            <button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="jieguodaochu()">
+                                筛查结果导出(多word)
+                            </button>
 								<button shiro:hasPermission="information:student:student" type="button" class="btn  btn-info" onclick="huodongbaogao()">
 									   活动报告
 								</button>
